# commonTools.2

./: Makefile.am  README.md  configure.ac
src/: allFiles.pl  allFiles.sh  copy.sh  updateProgramming.sh
src/Porn/Predict/: Makefile.am  isPorn.cpp  isPorn.h  test
src/Porn/trainModel/: feaSelect.py  main.sh  makeData.sh  postdo.pl  predict.sh  shuffle.py  test.sh  train.sh  vote.py
src/QueryMatch/: QueryMatch.cpp  QueryMatch.cpp.bak  QueryMatch.h  QueryMatch.h.bak
src/QueryMatch/.deps/: libquerymatch_la-GraphSegmentor.Plo  libquerymatch_la-QueryMatch.Plo  libquerymatch_la-WordSegmentor.Plo
src/QueryMatch/.libs/: libquerymatch.la  libquerymatch.lai  libquerymatch.so.0.0.0
src/Similarity/editDist/: EditDist.cpp  EditDist.h  Makefile  Makefile.am  Makefile.in  editDist  libeditdist.la  libeditdist_la-EditDist.lo  test.cpp  test.word.cpp
src/Similarity/editDist/.deps/: editDist-test.Po  libeditdist_la-EditDist.Plo
src/Similarity/editDist/.libs/: editDist  libeditdist.lai  libeditdist.so.0.0.0
src/classify/feaSel/: Makefile.am  feaChi.cpp  feaChi.h  feaIg.cpp  feaIg.h  tfidf.h
src/classify/feaSel/.deps/: feaTfIdf-tfidf.Po
src/classify/knn/: Makefile.am  knn.cpp  knn.h  test.cpp
src/classify/textModel/: general.h  main.cpp  main.gram.cpp  main.word.cpp  naive_bayes.cpp  naive_bayes.h  word_distribute.cpp  word_gram.cpp
src/cluster/: kmeans.c
src/cluster/kmeans/: Makefile.am  kmeans.cpp  kmeans.h  kmeans.pl  kmeans.py  test.cpp
src/commonTalk/: Makefile.am  commonTalk.cpp  commonTalk.h  test.cpp  vr_base.h
src/commonTalk/sso_string/.svn/: entries
src/commonTalk/sso_string/.svn/text-base/: hash_bytes.cc.svn-base  sso_string.h.svn-base  sso_string_base_ex.h.svn-base  sso_string_inst.cpp.svn-base  sso_test.cpp.svn-base
src/common_base/.deps/: database.Plo
src/common_base/.libs/: libcommon_base.la  libcommon_base.lai  libcommon_base.so.0.0.0
src/da_search/: Da_Search.cpp  Da_Search.cpp.bak  Da_Search.h  Da_Search.h.bak
src/da_search/.deps/: Da_Search.Plo
src/da_search/.libs/: libda_search.la  libda_search.lai  libda_search.so.0.0.0
src/deepLearning/char-rnn-tensorflow-master/: predo.pl  run.sh  utils.py  x.pl
src/deepLearning/cnn-text-classification/: main.sh  main.total.sh
src/dialogue/: Makefile.am  dialogue.cpp  dialogue.h  test.cpp
src/dialogue/.deps/: libdialogue_la-dialogue.Plo  test.Po
src/dialogue/.libs/: libdialogue.la  libdialogue.lai  libdialogue.so.0  libdialogue.so.0.0.0  test_run
src/doc_search/.deps/: Doc_Search.Plo
src/doc_search/.libs/: libdoc_search.la  libdoc_search.lai  libdoc_search.so.0  libdoc_search.so.0.0.0
src/draw/: draw.py
src/feaSel/: README  feaChi.h  run.chi.sh  run.ig.sh  tfidf.cpp  tfidf.h
src/feaSel/.deps/: feaChi-feaChi.Po  feaIg-feaIg.Po
src/http_client.babyEasy/: Makefile.am  main.cpp
src/http_client/.libs/: httpclient
src/http_server/: Makefile.am
src/http_server.babyEasy/: HttpHandler.cpp  HttpHandler.hpp  HttpResponse.cpp  Makefile.am  he.pl  http_server.cpp  httpserver  out.amr  restart.sh  start.sh  x.pl
src/http_server/.deps/: HttpHandler.Po  HttpResponse.Po  configuration.Po  http_server.Po  main.Po
src/http_server/.libs/: httpserver
src/include/: UrlEncodeAndDecode.h  general.h
src/include/BinaryFile/: LoadBinaryFile.cpp  LoadBinaryFile.h  test.cpp
src/include/gary_common/: gary_common.h  gary_string.h
src/include/reload_dict/: QueryClass.h  Reload.cpp  Reload.h
src/index/ahoCorasick/: Aho-Corasick.cpp  AhoCorasick.cpp  Makefile.am  READEME  test.cpp
src/index/ahoCorasick/com/: Aho-Corasick.new.cpp
src/index/ahoCorasick/lessons/: AhoCorasick.cpp  AhoCorasick.h
src/index/data_make/: Makefile.am  dlg_log_index_make_index.cpp
src/index/index_da/: CommonPrefixSearch.cpp  CommonPrefixSearch.h  CommonPrefixSearchTest.cpp  Index_da.cpp  Makefile.am  readme  readme.commonPrefixSearch
src/index/index_da/.deps/: FormatDlgCor.Po  Index_da.Plo  darts-clone.Plo  index_da_make_index.Po
src/index/index_da/.libs/: index_da_make_index  libindex_da.la  libindex_da.lai  libindex_da.so.0  libindex_da.so.0.0.0  preProcessCor_bin
src/index/index_da/commonPrefixSearch/: Makefile.am  sug.cpp  sug.h  test.cpp
src/index/inv_index/: normalize.cpp
src/jsoncpp/.deps/: json_reader.Plo  json_value.Plo  json_writer.Plo
src/jsoncpp/.libs/: libjsoncpp.la  libjsoncpp.lai  libjsoncpp.so.0.0.0
src/locate_getresult/: Makefile.am
src/locate_getresult/.libs/: liblocateresult.lai  liblocateresult.so.0.0.0
src/postRequest/: aaa.txt  amr.amr  request.py  test.txt  x.amr
src/postag/.svn/: all-wcprops  entries
src/postag/src/: Makefile.am  PosTagger.hpp  x.sh
src/postag/src/.svn/: all-wcprops  entries
src/postag/src/.svn/text-base/: post.sh.svn-base
src/segment/: Makefile.am  Segment.cpp  Segment.h  WordSegmentor.h  test2.cpp  validate.cpp  wordSegment.cpp  wordSegment.h
src/segment/.deps/: Segment.Plo  segment-main.Po
src/segment/.libs/: libSegment.la  libSegment.lai  libSegment.so.0.0.0  segment
src/service/VerticalSearch/: Makefile.am  VerticalDA.cpp  VerticalDA.h  VerticalDOC.cpp  VerticalDOC.h  music.cpp
src/service/commonTalk/: Base_pool.h  Makefile.am  socket_handle.hpp  test.cpp  worker.hpp
src/service/knowledge/: Makefile.am  dialogue.cpp  dialogue.h  music.cpp
src/speechProcessing/: Makefile.am  decodeAmr.cpp  decodeAmr.h  generateShort.cpp  headDTW.cpp  headDTW.h  readAMR2WAV.cpp  readWav.cpp  readWav.h  readWav2.cpp  similarity.2.cpp  similarity.cpp  similarity.h  test.cpp  test.sh  test2.cpp  testAmr.cpp  x.cpp
src/test/: Makefile.am
src/test/.deps/: test.Po
src/test/.libs/: test_run
src/textmodel/: Index_da.cpp  Index_da.h  Makefile.am  common.h  darts-clone.h  general.cpp  word_distribute.h  word_gram.h
src/textmodel/.deps/: main-general.Po  main-main.Po  main-naive_bayes.Po  main_gram-Index_da.Po  main_gram-general.Po  main_gram-main.gram.Po  main_gram-word_gram.Po  main_word-general.Po  main_word-main.word.Po  main_word-word_distribute.Po
src/textmodel/.libs/: main.gram
src/tools/kenlm/: x
src/tools/w2v/: do.pl  filter.py
(+112 files in other folders)
