include $(top_srcdir)/common.mk

SUBDIRS=@PACKAGE_DEPENDENCIES@ src/jsoncpp src/common_base  src/Porn/Predict src/QueryMatch  src/index/index_da src/locate_getresult src/index/inv_index/ src/segment src/Similarity/editDist src/index/data_make src/da_search src/doc_search src/dialogue src/http_client src/http_server src/classify/feaSel src/classify/textModel src/test 

export @MODULE_ROOT_VARS@
export BUILD_DEPENDENCIES
