include $(top_srcdir)/common.mk

SUBDIRS=@PACKAGE_DEPENDENCIES@ src/jsoncpp src/common_base  src/Porn/Predict src/QueryMatch  src/index/index_da src/index/index_da/commonPrefixSearch src/locate_getresult src/index/inv_index/ src/segment src/Similarity/editDist src/index/ahoCorasick src/da_search src/doc_search src/cluster/kmeans src/include/opencore-amr src/dialogue src/http_client src/http_server src/classify/feaSel src/classify/knn src/classify/textModel src/test src/mfccDtw src/speechProcessing
#src/sug 
export @MODULE_ROOT_VARS@
export BUILD_DEPENDENCIES
