include $(top_srcdir)/common.mk

#bin_PROGRAMS=
#AM_CPPFLAGS=


bin_PROGRAMS=feaChi
feaChi_SOURCES= feaChi.cpp
feaChi_LDADD= -lz 
feaChi_LDFLAGS= -DHAVE_CXX_STDHEADERS -DLINUX -DACE_HAS_EVENT_POLL -D_FILE_OFFSET_BITS=64 -fPIC -ggdb
AM_CPPFLAGS+=-L/usr/lib64 -I$(UTILS_ROOT) -I$(SSENCODING_ROOT) 
feaChi_CPPFLAGS=$(AM_CPPFLAGS) -DSS_LOG_DEFAULT_MODULE=fea_gen -DSS_DOCID_BITS=256

bin_PROGRAMS+=feaIg
feaIg_SOURCES= feaIg.cpp
feaIg_LDADD= -lz 
feaIg_LDFLAGS= -DHAVE_CXX_STDHEADERS -DLINUX -DACE_HAS_EVENT_POLL -D_FILE_OFFSET_BITS=64 -fPIC -ggdb
feaIg_CPPFLAGS=$(AM_CPPFLAGS) -DSS_LOG_DEFAULT_MODULE=fea_gen -DSS_DOCID_BITS=256


bin_PROGRAMS+=feaTfIdf
feaTfIdf_SOURCES= tfidf.cpp
feaTfIdf_LDADD= -lz 
feaTfIdf_LDFLAGS= -DHAVE_CXX_STDHEADERS -DLINUX -DACE_HAS_EVENT_POLL -D_FILE_OFFSET_BITS=64 -fPIC -ggdb
feaTfIdf_CPPFLAGS=$(AM_CPPFLAGS) -DSS_LOG_DEFAULT_MODULE=fea_gen -DSS_DOCID_BITS=256


#bin_PROGRAMS+=main.word
#main_word_SOURCES= main.word.cpp \
#				general.cpp word_distribute.cpp
#main_word_LDADD= -lz -lencoding 
#main_word_LDFLAGS= -DHAVE_CXX_STDHEADERS -DLINUX -DACE_HAS_EVENT_POLL -D_FILE_OFFSET_BITS=64 -fPIC -ggdb
#main_word_CPPFLAGS=$(AM_CPPFLAGS) -DSS_LOG_DEFAULT_MODULE=fea_gen -DSS_DOCID_BITS=256
#
#bin_PROGRAMS+=main
#main_SOURCES= main.cpp \
#				general.cpp naive_bayes.cpp
#main_LDADD= -lz -lencoding 
#main_LDFLAGS= -DHAVE_CXX_STDHEADERS -DLINUX -DACE_HAS_EVENT_POLL -D_FILE_OFFSET_BITS=64 -fPIC -ggdb
#main_CPPFLAGS=$(AM_CPPFLAGS) -DSS_LOG_DEFAULT_MODULE=fea_gen -DSS_DOCID_BITS=256
